# Time-FED

./: .gitignore  404.html  README.md  __init__.py  environment.yml  index.html  mkdocs.yml  pyproject.toml  search.html  setup.cfg  setup.py  utils.py
.github/workflows/: build.yml  mkdocs.yml
configs/: index.html
docs/: 2022-09-15-DRA-Status-v2.pptx  TechnologyInfusion.pptx  configs.md  index.md  usage.md  ~$TimeFED_BrownBag.pptx
internal/: MYR22.pptx
mloc/: utils.py
mloc/forecasting/: README.md  forecast.py
mloc/research/: classify.py  config.py  extract_features.py  plots.py  preprocess.py  utils.py
mloc/research/mloc/: utils.py
notebooks/: PWV_Reitan_approx.ipynb  PWV_analysis.ipynb  PWV_plots.ipynb  PWV_resampled.ipynb  Playground_Regression.ipynb  analysis.ipynb  analysis.ntbk  analysis.py  interp_plots.ipynb  interp_plots.py  interp_plots_v3.ipynb  playground_R0_RFregressor.ipynb  playground_r0_RFregressor.ipynb  playground_r2.ipynb  playground_smoothed_r0.ipynb  playground_synchrony.ipynb  playground_sza.ipynb  playground_weather_RFregressor.ipynb  plot_utils.py  preproc_r0.py  r0.cn2.weather.historical.ipynb  r0_comparison.ipynb  score_plots.py  weather.ipynb  weather_comparison_to_baseline_plots.ipynb  window_interpolate.py  windspeed_weeklong_midyearreview.ipynb
search/: search_index.json
src/: classify.py  data2df.py  extract_features.py  forecast.py  plots.py  preprocess.py  run.sh  utils.py
src/bash/: r0_features.5mins.10ptwin.OC.sh
src/bash/3hr_forecast.5min_increment/: Cn2.sh  cn2_weather.sh  nonhist_r0_cn2_weather.sh  plot.cn2_weather.sh  plot.r0_cn2_weather.sh  plot.weather.sh  pressure.sh  r0_cn2_weather.sh  r0_weather.sh  relative_humidity.sh  temperature.sh  weather.sh  wind_speed.sh
src/bash/old/: r0_features.5mins.10ptwin.historical.OC.sh  r0_features.5mins.5ptwin.OC.sh  r0_features.5mins.5ptwin.historical.OC.sh
src/bash/pwv/: pwv.sh
src/bash/r0_baseline.5mins.historical/: 10ptwin.1hour_shift.sh  10ptwin.2hour_shift.sh  10ptwin.5min_shift.sh  5ptwin.1hour_shift.sh  5ptwin.3hour_shift.sh  5ptwin.5min_shift.sh
src/bash/r0_baseline.5mins.historical.OC/: 10ptwin.1hour_shift.sh  10ptwin.2hour_shift.sh  10ptwin.3hour_shift.sh  5ptwin.1hour_shift.sh  5ptwin.2hour_shift.sh  5ptwin.3hour_shift.sh
src/configs/: r0.yml  r0_features.5mins.10ptwin.OC.yml  r0_features.5mins.10ptwin.historical.OC.yml  r0_features.5mins.5ptwin.OC.yml  r0_features.5mins.5ptwin.historical.OC.yml  r0_features.yml  relative_humidity.yml  temperature.yml
timefed/: __init__.py  __main__.py  config.py  extract.py  model.py  pipeline.py  select_features.py  subselect.py  utils.py
timefed/configs/: defs.yml  gen.yml  gen_ym_v2.yml  requirements.yml  v4.template.yml
timefed/core/: deep.py  evaluate.py  extract.py  lstm.py  model.py  rf.py  selfeatures.py  subselect.py
timefed/forecasting/: forecast.py
timefed/preprocess/: dsn.py
timefed/research/: classify.py  extract.py  extract_features.py  model.py  pipeline.py  plots.py  select_features.py  subselect.py
timefed/tests/: test_extract.py  v1.template.yml  v2.template.yml
timefed/utils/: evaluate.py  evaluate_tools.py  plots.py  roll.py  utils.py
usage/: index.html
(+217 files in other folders)
