[project]
name = "timefed"
version = "2.2.0"
description = "Timeseries Forecasting, Evaluation, and Deployment"
readme = "README.rst"
requires-python = ">=3.10"
license = {file = "LICENSE"}
keywords = ["timefed", "TimeFED", "Time-FED"]
authors = [
  {name = "James Montgomery", email = "J.Montgomery@jpl.nasa.gov"}
]
maintainers = [
  {name = "James Montgomery", email = "J.Montgomery@jpl.nasa.gov"}
]
classifiers = [
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
]
dependencies = [
  "click",
  "h5py",
  "matplotlib",
  "mlky",
  "netcdf4",
  "numpy",
  "pandas",
  "pvlib",
  "pyyaml",
  "ray",
  "scipy == 1.13.0",
  "seaborn",
  "scikit-learn",
  "tables",
  "torch",
  "tqdm",
  "tsfresh",
  "xarray"
]

[project.optional-dependencies]
docs = [
  "mkdocs",
  "mkapi"
]

[project.urls]
repository = "https://github.jpl.nasa.gov/jamesmo/TimeFED"

[project.scripts]
timefed = "timefed.__main__:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "timefed/__init__.py"
