[metadata]
name = timefed
version = attr: timefed.__version__
author = James Montgomery
author_email = J.Montgomery@jpl.nasa.gov
description = Timeseries Forecasting, Evaluation, and Deployment
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
  Programming Language :: Python :: 3
  Operating System :: OS Independent

[project.urls]
Homepage = https://github.jpl.nasa.gov/jamesmo/TimeFED
Issues = https://github.jpl.nasa.gov/jamesmo/TimeFED/issues

[options]
packages = find:
python_requires = >=3.10
install_requires =
  h5py
  matplotlib
  numpy < 2.0.0
  pandas
  pvlib
  pyyaml
  ray
  scipy
  seaborn
  scikit-learn
  tables
  tqdm
  tsfresh

[options.extras_require]
dev =
  build

[options.entry_points]
console_scripts =
  timefed = timefed.__main__:cli
